--- a/client/src/Components/BusinessSetup/business_setup.css
+++ b/client/src/Components/BusinessSetup/business_setup.css
@@ -1,5 +1,5 @@
 .business_setup {
-  background: #ffffff; }
+  background: #f2f2f2; }
   .business_setup .business-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -10,4 +10,4 @@
   .business_setup .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #ffffff; }
+    background-color: #f2f2f2; }
