--- a/client/src/Components/CommonSetup/common_setup.scss
+++ b/client/src/Components/CommonSetup/common_setup.scss
@@ -1,5 +1,5 @@
 .common_setup{
-    background: #ffffff;
+    background: #f2f2f2;
 .common-section{
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -11,7 +11,7 @@
 .toggle-section{
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
 }
 
 }
