--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -43,6 +43,19 @@
     background: #f8f8f8;
 }
 
+.hdg_actions1 {
+    background: #ffff;
+}
+
+
+.hdg_actions1 .form-group {
+    margin-bottom: 0;
+    margin-top: 4px;
+    padding: 0;
+    padding-top: 20px;
+    cursor: pointer;
+}
+
 .hdg_actions label {
     text-transform: uppercase;
     font-size: 0.8rem;
