--- a/client/src/Components/common/SideMenuBar/sideMenu.css
+++ b/client/src/Components/common/SideMenuBar/sideMenu.css
@@ -4,7 +4,8 @@
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding-top: 15px;
   padding-bottom: 8px;
-  font-size: 14px; }
+  font-size: 14px;
+  cursor: pointer; }
   .hptl-phase1-sideMenuBar .side-menu-title span {
     font-size: 10px; }
 
