--- a/client/src/Components/RegistrationPatient/registration.css
+++ b/client/src/Components/RegistrationPatient/registration.css
@@ -13,7 +13,7 @@
     background-color: #ffff; }
   .hptl-phase1-patientreg-details .text_field {
     width: 100% !important;
-    background-color: #FBFBFB;
+    background-color: #fbfbfb;
     font-size: "11px";
     margin-right: "5px"; }
   .hptl-phase1-patientreg-details .paper {
@@ -36,3 +36,6 @@
 
 .hptl-phase1-footer .app_bar {
   background: #000000; }
+
+.spacing-push {
+  margin-top: 6em; }
