--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -13,7 +13,7 @@
 
 .startPoint {
   position: fixed;
-  z-Index: 100000; }
+  z-index: 100000; }
 
 #pageHeader {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -28,7 +28,7 @@
 
 .hdg_bredcrump .breadcrumb {
   font-size: 0.7rem;
-  padding: 0 0 .5rem;
+  padding: 0 0 0.5rem;
   margin-bottom: 0;
   background-color: #fff; }
 
@@ -57,7 +57,7 @@
 .hdg_actions .next_actions,
 .hdg_actions .previous_actions {
   padding: 0;
-  padding-top: 35px; }
+  padding-top: 29px; }
 
 .hdg_actions .next_actions i,
 .hdg_actions .previous_actions i {
@@ -78,3 +78,8 @@
 .hdg_actions i.fa-search {
   line-height: 20px;
   margin-left: 50%; }
+
+.breadcrumb-fixed {
+  position: fixed;
+  z-index: 2;
+  width: 83%; }
