--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -1,5 +1,5 @@
 :global {
-  .tab-container {
+  .tab-container {    
     .tab-button {
       font-size: 12px;
       font-weight: normal;
@@ -7,7 +7,7 @@
       background-color: #f3f3f3;
       // border: solid 1px #d0d8dc;
       color: #7c909b;
-      padding: 5px 15px;
+      // padding: 5px 15px;
       cursor: pointer;
       border-top-right-radius: 5px;
       border-top-left-radius: 5px;
@@ -546,4 +546,14 @@
 
 body {
   background-color: #f2f2f2;
+}
+
+.tab-container nav li 
+label{
+  padding-top: "2px";
+}
+
+.style_Label
+{
+  margin-bottom: "0px !important"
 }
