Front end screen changes done

--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
@@ -24,7 +24,7 @@
 
 .hptl-phase1-add-patient-form .text_field {
   width: 100% !important;
-  background-color: #FBFBFB;
+  background-color: #fbfbfb;
   font-size: "12px";
   margin-right: "5px"; }
 
