Design and language changes done

--- a/client/src/Components/RegistrationPatient/ConsultationDetails/MLCPatient/MLCPatient.css
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/MLCPatient/MLCPatient.css
@@ -1,6 +1,7 @@
 .hptl-phase1-add-mlcpatient-form {
   background: #fff;
-  border-radius: 5px; }
+  border-radius: 5px;
+  padding-top: 10px; }
   .hptl-phase1-add-mlcpatient-form .primary-details {
     padding: 5px;
     border-right: 1px solid #000; }
