--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -186,7 +186,8 @@
   }
 
   .ins-tab-container {
-    .tab-button {
+    .tab-button,
+    label {
       width: 100%;
       font-size: 10px;
       font-weight: normal;
