--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
@@ -38,7 +38,7 @@
       color: #fff;
       padding: 5px;
       position: relative;
-      top: 105px;
+      top: 99px;
       cursor: pointer;
       margin-left: -1px;
       margin-right: -1px;
@@ -46,4 +46,5 @@
     .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
       position: absolute;
       top: -1px;
-      left: 15px; }
+      left: 15px;
+      height: 101px; }
