--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -44,7 +44,7 @@
         color: #fff;
         padding: 5px;
         position: relative;
-        top: 105px;
+        top: 99px;
         cursor: pointer;
         margin-left: -1px;
         margin-right: -1px;
@@ -54,6 +54,7 @@
         position: absolute;
         top: -1px;
         left: 15px;
+        height: 101px;
       }
     }
   }
