Debugger free code and some enhancements

--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -12,15 +12,12 @@ div[numberbox="true"] {
     border: 0;
     margin: 0;
     padding: 6px 0 7px;
-    display: block;
-    min-width: 0;
-    flex-grow: 1;
     box-sizing: content-box;
     background: none;
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
     background-color: #fbfbfb;
-    width: 100% !important;
+    min-width: 100% !important;
   }
 }
 
