--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -9,15 +9,12 @@ div[numberbox="true"] input[type="text"] {
     border: 0;
     margin: 0;
     padding: 6px 0 7px;
-    display: block;
-    min-width: 0;
-    flex-grow: 1;
     box-sizing: content-box;
     background: none;
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
     background-color: #fbfbfb;
-    width: 100% !important; }
+    min-width: 100% !important; }
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
   background-color: #00bcb0 !important; }
