--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -4,7 +4,7 @@ div[numberbox="true"] {
   }
 }
 .DayPickerInput {
-  z-index: 2 !important;
+  // z-index: 2 !important;
   input {
     font: inherit;
     color: currentColor;
@@ -16,8 +16,8 @@ div[numberbox="true"] {
     vertical-align: middle;
     -webkit-tap-highlight-color: transparent;
     background-color: #fbfbfb;
-    width: 100 !important;
-    min-width: 100%;
+    // width: 100 !important;
+    max-width: 75% !important;
   }
 }
 
