--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -1,7 +1,22 @@
 .hptl-phase1-billing-form {
   background: #fff;
-  border-radius: 5px;
-  padding: 5px; }
+  border-radius: 5px; }
+
+.hptl-phase1-add-billing-form .primary-details {
+  padding: 5px;
+  border-right: 1px solid #000; }
+  @media only screen and (max-width: 904px) {
+    .hptl-phase1-add-billing-form .primary-details {
+      padding: 5px; } }
+  .hptl-phase1-add-billing-form .primary-details .primary-box-container {
+    padding: 5px; }
+  .hptl-phase1-add-billing-form .primary-details .last-box-container {
+    padding: 5px;
+    border: 1px solid #000; }
+  .hptl-phase1-add-billing-form .primary-details .last-box-label {
+    padding: 15px;
+    font-weight: 600;
+    font-size: 15px; }
 
 .hptl-phase1-add-billing-form label {
   font-weight: 400;
@@ -35,7 +50,8 @@
 .hptl-phase1-add-billing-form .table-detail {
   background: "#b4e2df"; }
 
-.hptl-phase1-add-billing-form th, .hptl-phase1-add-billing-form td {
+.hptl-phase1-add-billing-form th,
+.hptl-phase1-add-billing-form td {
   border-right: 1px solid #e6e6e6;
   font-size: 11px; }
 
@@ -44,3 +60,24 @@
   padding-bottom: 0px;
   border-radius: 5px;
   border: 1px solid #d3d3d3; }
+
+.hptl-phase1-add-billing-form .secondary-details {
+  padding: 5px; }
+  .hptl-phase1-add-billing-form .secondary-details .secondary-box-container {
+    padding: 5px; }
+    .hptl-phase1-add-billing-form .secondary-details .secondary-box-container .attach-design {
+      background: #8c8c8c;
+      min-height: 30px;
+      color: #fff;
+      padding: 5px;
+      position: relative;
+      top: 99px;
+      cursor: pointer;
+      margin-left: -1px;
+      margin-right: -1px;
+      font-size: 11px; }
+    .hptl-phase1-add-billing-form .secondary-details .secondary-box-container .preview-image {
+      position: absolute;
+      top: -1px;
+      left: 15px;
+      height: 101px; }
