Added Biling in fornt desk and OPbill screen added.

--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -11,8 +11,7 @@
   .hptl-phase1-add-billing-form .primary-details .primary-box-container {
     padding: 5px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-container {
-    padding: 5px;
-    border: 1px solid #000; }
+    padding: 5px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-label {
     padding: 15px;
     font-weight: 600;
