--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.scss
@@ -16,7 +16,7 @@
 
     .last-box-container {
       padding: 5px;
-      border: 1px solid #000;
+      // border-top: 1px solid #000;
     }
 
     .last-box-label {
