--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.css
@@ -28,6 +28,7 @@
   margin-left: 4%;
   margin-top: 2%; }
 
-.htpl-phase1-primary-secinsurance-form th, .htpl-phase1-primary-secinsurance-form td {
+.htpl-phase1-primary-secinsurance-form th,
+.htpl-phase1-primary-secinsurance-form td {
   border-right: 1px solid #e6e6e6;
   font-size: 11px; }
