--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
@@ -13,6 +13,6 @@
     background-color: #f2f2f2; }
   .hptl-phase1-patient-details .text_field {
     width: 100% !important;
-    background-color: #FBFBFB;
+    background-color: #fbfbfb;
     font-size: "11px";
     margin-right: "5px"; }
