--- a/client/src/Components/BillDetails/BillDetails.css
+++ b/client/src/Components/BillDetails/BillDetails.css
@@ -10,7 +10,19 @@
   .hptl-phase1-op-display-billing-form .form-details {
     padding: 5px;
     padding-bottom: 0px; }
-  .hptl-phase1-op-display-billing-form th,
-  .hptl-phase1-op-display-billing-form td {
-    font-size: 11px;
-    border-right: 1px solid #e6e6e6; }
+  .hptl-phase1-op-display-billing-form .lbl-milldle {
+    padding-top: 30px; }
+  .hptl-phase1-op-display-billing-form .lbl-resize label {
+    font-size: 16px;
+    background: #5f5f5f; }
+
+.bottom-details {
+  padding: 5px;
+  padding-bottom: 0px;
+  border-top: 1px solid #5f5f5f;
+  margin-top: 0.5%; }
+
+.insurance-details {
+  padding: 5px;
+  padding-bottom: 5px;
+  border: 1px solid #5f5f5f; }
