--- a/client/src/Components/BillDetails/BillDetails.scss
+++ b/client/src/Components/BillDetails/BillDetails.scss
@@ -13,12 +13,25 @@
     padding: 5px;
     padding-bottom: 0px;
   }
+  .lbl-milldle {
+    padding-top: 30px;
+  }
+  .lbl-resize {
+    label {
+      font-size: 16px;
+      background: #5f5f5f;
+    }
+  }
+}
 
-  .table-detail {
-  }
-  th,
-  td {
-    font-size: 11px;
-    border-right: 1px solid #e6e6e6;
-  }
+.bottom-details {
+  padding: 5px;
+  padding-bottom: 0px;
+  border-top: 1px solid #5f5f5f;
+  margin-top: 0.5%;
+}
+.insurance-details {
+  padding: 5px;
+  padding-bottom: 5px;
+  border: 1px solid #5f5f5f;
 }
