--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -54,6 +54,13 @@
   border-right: 1px solid #e6e6e6;
   font-size: 11px; }
 
+.hptl-phase1-add-billing-form .modal-container {
+  position: relative; }
+
+.hptl-phase1-add-billing-form .modal-container .modal,
+.hptl-phase1-add-billing-form .modal-container .modal-backdrop {
+  position: absolute; }
+
 .hptl-phase1-add-billing-form .header-details {
   padding: 5px;
   padding-bottom: 0px;
