--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -184,6 +184,35 @@
     }
   }
 
+  .htpl1-phase1-btn-others {
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 2px;
+    background-color: #5f5f5f;
+    border: solid 1px #fff;
+    color: #fff;
+    padding: 2px 20px;
+    cursor: pointer;
+
+    &:hover {
+      color: #00bcb0;
+      border: solid 1px rgb(190, 22, 22);
+    }
+
+    &:active {
+      color: #68509f;
+      border: solid 1px #68509f;
+      box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    &:disabled {
+      background-color: #d0d8dc;
+      color: rgba(72, 90, 99, 0.26);
+      border: none;
+      cursor: not-allowed;
+    }
+  }
+
   //Start's Here
   .check_mark {
     width: 80px;
