--- a/client/src/Components/BillDetails/BillDetails.css
+++ b/client/src/Components/BillDetails/BillDetails.css
@@ -22,7 +22,17 @@
   border-top: 1px solid #5f5f5f;
   margin-top: 0.5%; }
 
+.first-form-details {
+  padding: 5px;
+  padding-bottom: 0px;
+  border: 1px solid #5f5f5f; }
+
 .insurance-details {
   padding: 5px;
   padding-bottom: 5px;
   border: 1px solid #5f5f5f; }
+
+.colorPrimary div {
+  background-color: #dbad64; }
+  .colorPrimary div h2 {
+    color: #fff; }
