--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
@@ -4,6 +4,24 @@
 }
 
 .hptl-phase1-op-add-billing-form {
+  .primary-details {
+    padding: 5px;
+    border-right: 1px solid #000;
+    @media only screen and (max-width: 904px) {
+      padding: 5px;
+    }
+    .primary-box-container {
+      padding: 5px;
+    }
+  }
+
+  .secondary-details {
+    padding: 5px;
+    .secondary-box-container {
+      padding: 5px;
+    }
+  }
+
   label {
     font-weight: 400;
     font-size: 11px;
@@ -34,4 +52,9 @@
     font-size: 11px;
     border-right: 1px solid #e6e6e6;
   }
+}
+.insurance-amt-details {
+  padding: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #5f5f5f;
 }
