--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -135,6 +135,28 @@
     border: none;
     cursor: not-allowed; }
 
+:global .htpl1-phase1-btn-others {
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 2px;
+  background-color: #5f5f5f;
+  border: solid 1px #fff;
+  color: #fff;
+  padding: 2px 20px;
+  cursor: pointer; }
+  :global .htpl1-phase1-btn-others:hover {
+    color: #00bcb0;
+    border: solid 1px #be1616; }
+  :global .htpl1-phase1-btn-others:active {
+    color: #68509f;
+    border: solid 1px #68509f;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12); }
+  :global .htpl1-phase1-btn-others:disabled {
+    background-color: #d0d8dc;
+    color: rgba(72, 90, 99, 0.26);
+    border: none;
+    cursor: not-allowed; }
+
 :global .check_mark {
   width: 80px;
   height: 130px;
