--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.css
@@ -2,6 +2,16 @@
   background: #ffff;
   border-radius: 5px; }
 
+.htpl-phase1-primary-insurance-form .primary-details {
+  padding: 5px;
+  padding-bottom: 15px;
+  border-right: 1px solid #000; }
+  @media only screen and (max-width: 904px) {
+    .htpl-phase1-primary-insurance-form .primary-details {
+      padding: 5px; } }
+  .htpl-phase1-primary-insurance-form .primary-details .primary-box-container {
+    padding: 5px; }
+
 .htpl-phase1-primary-insurance-form mark {
   background: none;
   color: red; }
@@ -12,6 +22,10 @@
 
 .htpl-phase1-primary-insurance-form .centerAlign {
   text-align: center; }
+
+.htpl-phase1-primary-insurance-form .go-button {
+  cursor: pointer;
+  margin-top: 10px; }
 
 .htpl-phase1-primary-insurance-form .text_field {
   width: 100% !important;
@@ -37,7 +51,24 @@
   margin-left: 4%;
   margin-top: 2%; }
 
-.htpl-phase1-primary-insurance-form th,
-.htpl-phase1-primary-insurance-form td {
-  border-right: 1px solid #e6e6e6;
-  font-size: 11px; }
+.htpl-phase1-primary-insurance-form .secondary-details {
+  padding: 5px;
+  padding-bottom: 15px; }
+  .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container {
+    padding: 5px; }
+    .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .attach-design {
+      background: #8c8c8c;
+      min-height: 30px;
+      color: #fff;
+      padding: 5px;
+      position: relative;
+      top: 99px;
+      cursor: pointer;
+      margin-left: -1px;
+      margin-right: -1px;
+      font-size: 11px; }
+    .htpl-phase1-primary-insurance-form .secondary-details .secondary-box-container .preview-image {
+      position: absolute;
+      top: -1px;
+      left: 15px;
+      height: 101px; }
