--- a/client/src/Components/Advance/AdvanceModal.scss
+++ b/client/src/Components/Advance/AdvanceModal.scss
@@ -22,6 +22,14 @@
       background: #5f5f5f;
     }
   }
+
+  .app_bar {
+    box-shadow: none;
+    background-color: #dbad64;
+    h2 {
+      color: #fff;
+    }
+  }
 }
 
 .bottom-details {
@@ -34,6 +42,7 @@
 .colorPrimary {
   div {
     background-color: #dbad64;
+    box-shadow: none;
     h2 {
       color: #fff;
     }
