--- a/client/src/Components/BillDetails/BillDetails.scss
+++ b/client/src/Components/BillDetails/BillDetails.scss
@@ -12,6 +12,7 @@
   .form-details {
     padding: 5px;
     padding-bottom: 0px;
+    margin-top: 7px;
   }
   .lbl-milldle {
     padding-top: 30px;
@@ -21,6 +22,11 @@
       font-size: 16px;
       background: #5f5f5f;
     }
+  }
+
+  .form-details {
+    padding: 5px;
+    padding-bottom: 0px;
   }
 }
 
