--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
@@ -34,7 +34,8 @@
 
 .hptl-phase1-op-add-billing-form .go-button {
   cursor: pointer;
-  margin-bottom: -10px; }
+  margin-bottom: -15px;
+  margin-top: -10px; }
 
 .hptl-phase1-op-add-billing-form th,
 .hptl-phase1-op-add-billing-form td {
