--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
@@ -42,7 +42,8 @@
 
   .go-button {
     cursor: pointer;
-    margin-bottom: -10px;
+    margin-bottom: -15px;
+    margin-top: -10px;
   }
 
   .table-detail {
