--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.css
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.css
@@ -12,3 +12,6 @@
     margin: 10px;
     margin-bottom: 0px;
     background-color: #f2f2f2; }
+  .hptl-phase1-insurance-details .newadd-button {
+    padding: "2px";
+    margin-bottom: "-10px"; }
