--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceDetails.scss
@@ -14,4 +14,8 @@
     margin-bottom: 0px;
     background-color: #f2f2f2;
   }
+  .newadd-button {
+    padding: "2px";
+    margin-bottom: "-10px";
+  }
 }
