--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
@@ -4,6 +4,18 @@
 }
 
 .htpl-phase1-primary-insurance-form {
+  .primary-details {
+    padding: 5px;
+    padding-bottom: 15px;
+    border-right: 1px solid #000;
+    @media only screen and (max-width: 904px) {
+      padding: 5px;
+    }
+    .primary-box-container {
+      padding: 5px;
+    }
+  }
+
   mark {
     background: none;
     color: red;
@@ -15,6 +27,11 @@
 
   .centerAlign {
     text-align: center;
+  }
+
+  .go-button {
+    cursor: pointer;
+    margin-top: 10px;
   }
 
   .text_field {
@@ -44,9 +61,29 @@
     margin-top: 2%;
   }
 
-  th,
-  td {
-    border-right: 1px solid #e6e6e6;
-    font-size: 11px;
+  .secondary-details {
+    padding: 5px;
+    padding-bottom: 15px;
+    .secondary-box-container {
+      padding: 5px;
+      .attach-design {
+        background: #8c8c8c;
+        min-height: 30px;
+        color: #fff;
+        padding: 5px;
+        position: relative;
+        top: 99px;
+        cursor: pointer;
+        margin-left: -1px;
+        margin-right: -1px;
+        font-size: 11px;
+      }
+      .preview-image {
+        position: absolute;
+        top: -1px;
+        left: 15px;
+        height: 101px;
+      }
+    }
   }
 }
