--- a/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/SecondaryInsurance/SecondaryInsurance.scss
@@ -3,7 +3,18 @@
   border-radius: 5px;
   // padding: 10px;
 }
-.htpl-phase1-primary-secinsurance-form {
+.htpl-phase1-seconary-insurance-form {
+  .primary-details {
+    padding: 5px;
+    padding-bottom: 15px;
+    border-right: 1px solid #000;
+    @media only screen and (max-width: 904px) {
+      padding: 5px;
+    }
+    .primary-box-container {
+      padding: 5px;
+    }
+  }
   label {
     font-weight: 400;
     font-size: 11px;
@@ -21,6 +32,10 @@
     top: 5px;
     left: 36px;
   }
+  .go-button {
+    cursor: pointer;
+    margin-top: 10px;
+  }
   .refactor-design {
     min-height: 28px;
     background-color: #fbfbfb;
@@ -30,11 +45,29 @@
     margin-left: 4%;
     margin-top: 2%;
   }
-  .table-detail {
-  }
-  th,
-  td {
-    border-right: 1px solid #e6e6e6;
-    font-size: 11px;
+  .secondary-details {
+    padding: 5px;
+    padding-bottom: 15px;
+    .secondary-box-container {
+      padding: 5px;
+      .attach-design {
+        background: #8c8c8c;
+        min-height: 30px;
+        color: #fff;
+        padding: 5px;
+        position: relative;
+        top: 99px;
+        cursor: pointer;
+        margin-left: -1px;
+        margin-right: -1px;
+        font-size: 11px;
+      }
+      .preview-image {
+        position: absolute;
+        top: -1px;
+        left: 15px;
+        height: 101px;
+      }
+    }
   }
 }
