--- a/client/src/Components/BillDetails/BillDetails.css
+++ b/client/src/Components/BillDetails/BillDetails.css
@@ -19,6 +19,8 @@
   .hptl-phase1-op-display-billing-form .form-details {
     padding: 5px;
     padding-bottom: 0px; }
+  .hptl-phase1-op-display-billing-form .Paper {
+    border: 1px solid #5f5f5f; }
 
 .bottom-details {
   padding: 5px;
@@ -32,9 +34,8 @@
   border: 1px solid #5f5f5f; }
 
 .insurance-details {
-  padding: 5px;
-  padding-bottom: 5px;
-  border: 1px solid #5f5f5f; }
+  padding: 20px;
+  padding-bottom: 5px; }
 
 .colorPrimary div {
   background-color: #dbad64; }
