--- a/client/src/Components/BillDetails/BillDetails.scss
+++ b/client/src/Components/BillDetails/BillDetails.scss
@@ -28,6 +28,10 @@
     padding: 5px;
     padding-bottom: 0px;
   }
+
+  .Paper {
+    border: 1px solid #5f5f5f;
+  }
 }
 
 .bottom-details {
@@ -43,9 +47,8 @@
   border: 1px solid #5f5f5f;
 }
 .insurance-details {
-  padding: 5px;
+  padding: 20px;
   padding-bottom: 5px;
-  border: 1px solid #5f5f5f;
 }
 
 .colorPrimary {
