--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -8,15 +8,22 @@ $black: #000;
   width: 100%;
   display: block;
 }
-
-#spotlight {
-  border-radius: 5px;
-  display: block;
+.spotlightContainer {
   width: 700px;
-  height: 56px;
+  position: relative;
   margin: auto;
   box-shadow: 0 25px 60px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #f8f5f4;
+  overflow: hidden;
+  opacity: 0.8;
+}
+#spotlightInput {
+  display: block;
+  width: 100%;
+  height: 56px;
+  margin: auto;
   outline: none;
   font-size: 1.6rem;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
@@ -27,35 +34,24 @@ $black: #000;
   background-position: left 17px center;
   background-repeat: no-repeat;
   background-size: 3.5%;
-  padding: 0 52px;
+  padding: 0 135px 0 52px;
+  -webkit-appearance: none;
+  border: none;
 }
 
-#desc {
+#spotlightFilterBy {
   position: absolute;
-  top: 35%;
-  left: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  padding: 0 40%;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
-    Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 1.4rem;
-  line-height: 1.5;
-  color: $fontcolor;
-}
-#filterBy {
-  position: absolute;
-  margin-left: 62%;
+  right: 2%;
   margin-top: 15px;
-  width: 180px;
+  // width: 180px;
   select {
     border: none;
     background-color: transparent;
   }
 }
-#contentArea {
+#spotlightResultArea {
   background-color: #f9f5f4;
-  width: 693px;
-  margin-left: 26%;
+  width: 100%;
+  max-height: 350px;
+  overflow: auto;
 }
