--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -23,16 +23,22 @@ div[numberbox="true"] input[type="text"] {
   font-weight: bold; }
 
 .table {
-  width: 100%; }
+  width: 100%;
+  border-bottom: 1.5px solid #f2f2f2; }
   .table tbody {
     height: 200px;
     overflow: auto;
     width: 100%; }
+  .table tbody tr {
+    cursor: pointer; }
   .table tbody td {
     vertical-align: middle;
-    white-space: nowrap; }
+    white-space: nowrap;
+    font-size: 0.75rem; }
   .table thead tr td {
-    font-weight: bold; }
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase; }
 
 .scrolling table {
   table-layout: inherit;
