--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.css
@@ -3,16 +3,12 @@
   border-radius: 5px; }
 
 .hptl-phase1-op-add-billing-form .primary-details {
-  padding: 5px;
-  border-right: 1px solid #000; }
-  @media only screen and (max-width: 904px) {
-    .hptl-phase1-op-add-billing-form .primary-details {
-      padding: 5px; } }
+  padding: 10px; }
   .hptl-phase1-op-add-billing-form .primary-details .primary-box-container {
-    padding: 5px; }
+    padding: 13px; }
 
 .hptl-phase1-op-add-billing-form .secondary-details {
-  padding: 5px; }
+  padding: 10px; }
   .hptl-phase1-op-add-billing-form .secondary-details .secondary-box-container {
     padding: 5px; }
 
@@ -26,7 +22,7 @@
 
 .hptl-phase1-op-add-billing-form .form-details {
   padding: 5px;
-  padding-bottom: 0px; }
+  padding-bottom: 10px; }
 
 .hptl-phase1-op-add-billing-form .header-details {
   margin-top: 0.5%;
@@ -37,6 +33,9 @@
   margin-bottom: -15px;
   margin-top: -10px; }
 
+.hptl-phase1-op-add-billing-form .Paper {
+  border: 1px solid #5f5f5f; }
+
 .hptl-phase1-op-add-billing-form th,
 .hptl-phase1-op-add-billing-form td {
   font-size: 11px;
@@ -44,5 +43,4 @@
 
 .insurance-amt-details {
   padding: 5px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #5f5f5f; }
+  padding-bottom: 5px; }
