--- a/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/AddOPBillingDetails/AddOPBillingForm.scss
@@ -5,18 +5,14 @@
 
 .hptl-phase1-op-add-billing-form {
   .primary-details {
-    padding: 5px;
-    border-right: 1px solid #000;
-    @media only screen and (max-width: 904px) {
-      padding: 5px;
-    }
+    padding: 10px;
     .primary-box-container {
-      padding: 5px;
+      padding: 13px;
     }
   }
 
   .secondary-details {
-    padding: 5px;
+    padding: 10px;
     .secondary-box-container {
       padding: 5px;
     }
@@ -32,7 +28,7 @@
   }
   .form-details {
     padding: 5px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
   }
 
   .header-details {
@@ -46,6 +42,10 @@
     margin-top: -10px;
   }
 
+  .Paper {
+    border: 1px solid #5f5f5f;
+  }
+
   .table-detail {
   }
   th,
@@ -57,5 +57,5 @@
 .insurance-amt-details {
   padding: 5px;
   padding-bottom: 5px;
-  border-bottom: 1px solid #5f5f5f;
+  // border-bottom: 1px solid #5f5f5f;
 }
