--- a/client/src/Components/OPBilling/PatientDisDetails/PatientDisplayForm/PatientDisplayForm.css
+++ b/client/src/Components/OPBilling/PatientDisDetails/PatientDisplayForm/PatientDisplayForm.css
@@ -13,3 +13,10 @@
 .hptl-phase1-display-patient-form label {
   font-weight: 400;
   font-size: 11px; }
+
+.hptl-phase1-display-patient-form .form-group {
+  margin-bottom: 0;
+  margin-top: 4px;
+  padding: 0;
+  padding-top: 20px;
+  cursor: pointer; }
