--- a/client/src/Components/OPBilling/PatientDisDetails/PatientDisplayForm/PatientDisplayForm.scss
+++ b/client/src/Components/OPBilling/PatientDisDetails/PatientDisplayForm/PatientDisplayForm.scss
@@ -16,4 +16,12 @@
     font-weight: 400;
     font-size: 11px;
   }
+
+  .form-group {
+    margin-bottom: 0;
+    margin-top: 4px;
+    padding: 0;
+    padding-top: 20px;
+    cursor: pointer;
+  }
 }
