--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -3,19 +3,18 @@
   border-radius: 5px; }
 
 .hptl-phase1-add-billing-form .primary-details {
-  padding: 5px;
-  border-right: 1px solid #000; }
-  @media only screen and (max-width: 904px) {
-    .hptl-phase1-add-billing-form .primary-details {
-      padding: 5px; } }
+  padding: 10px; }
   .hptl-phase1-add-billing-form .primary-details .primary-box-container {
-    padding: 5px; }
+    padding: 6px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-container {
     padding: 5px; }
   .hptl-phase1-add-billing-form .primary-details .last-box-label {
     padding: 15px;
     font-weight: 600;
     font-size: 15px; }
+
+.hptl-phase1-add-billing-form .Paper {
+  border: 1px solid #5f5f5f; }
 
 .hptl-phase1-add-billing-form label {
   font-weight: 400;
@@ -68,22 +67,6 @@
   border: 1px solid #d3d3d3; }
 
 .hptl-phase1-add-billing-form .secondary-details {
-  padding: 5px; }
+  padding: 10px; }
   .hptl-phase1-add-billing-form .secondary-details .secondary-box-container {
-    padding: 5px; }
-    .hptl-phase1-add-billing-form .secondary-details .secondary-box-container .attach-design {
-      background: #8c8c8c;
-      min-height: 30px;
-      color: #fff;
-      padding: 5px;
-      position: relative;
-      top: 99px;
-      cursor: pointer;
-      margin-left: -1px;
-      margin-right: -1px;
-      font-size: 11px; }
-    .hptl-phase1-add-billing-form .secondary-details .secondary-box-container .preview-image {
-      position: absolute;
-      top: -1px;
-      left: 15px;
-      height: 101px; }
+    padding: 8px; }
