--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -1,7 +1,7 @@
 $fontcolor: #666666;
 $black: #000;
 #spotlight_wrapper {
-  position: absolute;
+  position: fixed;
   top: 15%;
   left: 0;
   right: 0;
@@ -18,7 +18,7 @@ $black: #000;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #f8f5f4;
   overflow: hidden;
-  opacity: 0.8;
+  opacity: 1;
 }
 #spotlightInput {
   display: block;
@@ -35,7 +35,7 @@ $black: #000;
   background-position: left 17px center;
   background-repeat: no-repeat;
   background-size: 3.5%;
-  padding: 0 135px 0 52px;
+  padding: 0 170px 0 52px;
   -webkit-appearance: none;
   border: none;
 }
